--- a/backend/env.example
+++ b/backend/env.example
@@ -2,8 +2,10 @@
 NODE_ENV=development
 PORT=5000
 
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/meditrack
+# Supabase Configuration
+SUPABASE_URL=your_supabase_project_url_here
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
 # Clerk Configuration
 CLERK_SECRET_KEY=sk_test_your_clerk_secret_key_here
